# architecture-patterns-code-along

./: .gitignore  .pre-commit-config.yaml  README.md  allocation.py  codecov.yaml  conftest.py  environment.yaml  environment.yml  orm_sqlalchemy.py  pyproject.toml  repository.py  test_allocation.py  test_orm_sqlalchemy.py  test_repository.py
.github/workflows/: main.yml
allocations/: flask_app.py  model.py  orm_sqlalchemy.py  repository.py
allocations/adapters/: orm_sqlalchemy.py  repository.py
allocations/domain/: model.py
allocations/entrypoints/: flask_app.py
allocations/service_layer/: handlers.py  message_bus.py  services.py  unit_of_work.py
allocations/tests/: conftest.py
allocations/tests/e2e/: test_flask.py
allocations/tests/integration/: test_orm_sqlalchemy.py  test_repository.py
allocations/tests/unit/: test_allocation.py  test_batches.py  test_services.py
tests/: conftest.py  test_allocation.py  test_flask.py  test_orm_sqlalchemy.py  test_repository.py
tests/e2e/: test_flask.py
tests/integration/: test_orm_sqlalchemy.py  test_repository.py  test_uow.py
tests/unit/: test_allocation.py  test_batches.py  test_product.py  test_services.py
