[tool.poetry]
name = "allocation"
version = "0.1.0"
description = ""
authors = ["Baptiste Maingret <baptiste.maingret@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
SQLAlchemy = "^1.4.22"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-cov = "^2.12.1"
pre-commit = "^2.14.0"

[tool.coverage.run]
omit = [
    "test_*.py",
    ".venv/*"
]

[tool.black]
line-length = 88
target-version = ['py37']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
